cluster/kubernetes_dashboard/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubdashboard-ingressroute
  namespace: kubernetes-dashboard
spec:
  entryPoints: [web]
  routes:
    - kind: Rule
      match: PathPrefix(`/kubernetes-dashboard`)
      services:
      - kind: Service
        name: kubernetes-dashboard-kong-proxy
        namespace: kubernetes-dashboard
        port: kong-proxy
      middlewares:
      - name: stripkubdashboard
        namespace: kubernetes-dashboard

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripkubdashboard
  namespace: kubernetes-dashboard
spec:
  stripPrefix:
    prefixes:
      - "/kubernetes-dashboard"
    forceSlash: true
